syntax = "proto3";
package core.interquery.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "tendermint/crypto/proof.proto";

option go_package = "github.com/QuadrateOrg/core/x/interquery/types";

// Msg defines the interquery Msg service.
service Msg {
        // SubmitQueryResponse defines a method for submit query responses.
        rpc SubmitQueryResponse(MsgSubmitQueryResponse) returns (MsgSubmitQueryResponseResponse) {
                option (google.api.http) = {
                        post: "/interquery/tx/v1beta1/submitquery"
                        body: "*"
                };
        }

        rpc MakeInterchainRequest(MsgMakeInterchainRequest) returns (MsgMakeInterchainRequestResponse) {
                option (google.api.http) = {
                        post: "/interquery/tx/v1beta1/makeinterchainrequest"
                        body: "*"
                }; 
        }
}

// MsgSubmitQueryResponse represents a message type to fulfil a query request.
message MsgSubmitQueryResponse {
        option (gogoproto.equal) = false;
        option (gogoproto.goproto_getters) = false;
        option (gogoproto.goproto_stringer) = true;

        string chain_id = 1 [(gogoproto.moretags) = "yaml:\"chain_id\""];
        string query_id = 2 [(gogoproto.moretags) = "yaml:\"query_id\""];
        bytes result = 3 [(gogoproto.moretags) = "yaml:\"result\""];
        tendermint.crypto.ProofOps proof_ops = 4 [(gogoproto.moretags) = "yaml:\"proof_ops\""];
        int64 height = 5 [(gogoproto.moretags) = "yaml:\"height\""];
        string from_address = 6 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgSubmitQueryResponseResponse defines the MsgSubmitQueryResponse response
// type.
message MsgSubmitQueryResponseResponse {}

message MsgMakeInterchainRequest {
        option (gogoproto.equal) = false;
        option (gogoproto.goproto_getters) = false;
        option (gogoproto.goproto_stringer) = true;  

        string connection_id = 1 [(gogoproto.moretags) = "yaml:\"connection_id\""];
        string chain_id = 2 [(gogoproto.moretags) = "yaml:\"chain_id\""];
        string query_type = 3 [(gogoproto.moretags) = "yaml:\"query_type\""];
        bytes request = 4 [(gogoproto.moretags) = "yaml:\"request\""];
        int64 period = 5 [(gogoproto.moretags) = "yaml:\"period\""];
        string module = 6 [(gogoproto.moretags) = "yaml:\"module\""];
        string callback_id = 7 [(gogoproto.moretags) = "yaml:\"callback_id\""];
        int64 ttl = 8 [(gogoproto.moretags) = "yaml:\"ttl\""];
        string sender = 9  [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgMakeInterchainRequestResponse {}